--- a/popup.html
+++ b/popup.html
@@ -1,6 +1,9 @@
-<body style="width: 350px; height: 100px">
-	<h1>Seleccione divisa</h1>
-	<select name="divisa" id="inputDivisa" class="form-control" required="required">
+<script src="background.js"></script>
+<body style="width: 100px; height: 50px">
+	<h3>Seleccione divisa</h3>
+	<select id="inputDivisa" class="form-control user_input" required="required">
 		<option value="USDT">USDT</option>
+		<option value="BTC">BTC</option>
+		<option value="ETH">ETH</option>
 	</select>
 </body>
